[project]
name = "mi-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bleach>=6.4.0",
    "django-cors-headers>=4.9.0",
    "django-debug-toolbar>=7.0.0",
    "email-validator>=2.3.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
]
